--- a/config/west.yml
+++ b/config/west.yml
@@ -4,11 +4,30 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: hitsmaxft
+      url-base: https://github.com/hitsmaxft
+    - name: urob
+      url-base: https://github.com/urob
+    - name: dhruvinsh
+      url-base: https://github.com/dhruvinsh
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
     - name: zmk
       remote: zmkfirmware
-      import: app/west.yml
+      revision: main
+      clone-depth: 1
+      import:
+        file: app/west.yml
+    - name: zmk-helpers
+      remote: urob
+      revision: main
+    - name: zmk-dongle-display
+      remote: hitsmaxft
+      revision: main
+      clone-depth: 1
+    - name: zmk-tri-state
+      remote: dhruvinsh
+      revision: main
   self:
     path: config
