--- a/config/west.yml
+++ b/config/west.yml
@@ -15,7 +15,7 @@ manifest:
   projects:
     - name: zmk
       remote: zmkfirmware
-      revision: main
+      import: app/west.yml
     - name: zmk-helpers
       remote: urob
       revision: main
