--- a/build.yaml
+++ b/build.yaml
@@ -39,3 +39,9 @@ include:
   - board: cornix_e73
     shield: settings_reset
     artifact-name: reset
+
+  - board: nice_nano_v2
+    shield: corne_dongle_pro_micro dongle_display
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Dongle_O\"
+    artifact-name: nice_corne_dongle_oled
+    snippet: studio-rpc-usb-uart
