--- a/build.yaml
+++ b/build.yaml
@@ -45,3 +45,17 @@ include:
     cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Dongle_O\"
     artifact-name: nice_corne_dongle_oled
     snippet: studio-rpc-usb-uart
+
+  - board: nice_nano_v2
+    shield: corne_left
+    snippet: studio-rpc-usb-uart
+  - board: nice_nano_v2
+    shield: corne_right
+  - board: nice_nano_v2
+    shield: corne_left_peripheral
+    artifact-name: nice_corne_left_peripheral
+
+
+  - board: nice_nano_v2
+    shield: settings_reset
+    artifact-name: nice_settings_reset
