--- a/build.yaml
+++ b/build.yaml
@@ -19,43 +19,60 @@
 #
 ---
 include:
-  - board: cornix_e73
-    shield: cornix_dongle dongle_display
+  - board: cornix_dongle
+    shield: cornix_dongle_eyelash dongle_display
     snippet: studio-rpc-usb-uart
     artifact-name: cornix_dongle
-
-  - board: cornix_e73
-    shield: cornix_main_left
-    artifact-name: cornix_left_default
-
-  - board: cornix_e73
-    shield: cornix_ph_left
+~
+  - board: cornix_ph_left
+    # shield: cornix_indicator
     artifact-name: cornix_left_for_dongle
 
-  - board: cornix_e73
-    shield: cornix_right
+  - board: cornix_right
+    # shield: cornix_indicator
     artifact-name: cornix_right
 
-  - board: cornix_e73
+  - board: cornix_right
     shield: settings_reset
     artifact-name: reset
 
-  - board: nice_nano_v2
-    shield: corne_dongle_pro_micro dongle_display
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Dongle_O\"
-    artifact-name: nice_corne_dongle_oled
-    snippet: studio-rpc-usb-uart
+  # - board: cornix_e73
+  #   shield: cornix_dongle dongle_display
+  #   snippet: studio-rpc-usb-uart
+  #   artifact-name: cornix_dongle
 
-  - board: nice_nano_v2
-    shield: corne_left
-    snippet: studio-rpc-usb-uart
-  - board: nice_nano_v2
-    shield: corne_right
-  - board: nice_nano_v2
-    shield: corne_left_peripheral
-    artifact-name: nice_corne_left_peripheral
+  # - board: cornix_e73
+  #   shield: cornix_main_left
+  #   artifact-name: cornix_left_default
+
+  # - board: cornix_e73
+  #   shield: cornix_ph_left
+  #   artifact-name: cornix_left_for_dongle
+
+  # - board: cornix_e73
+  #   shield: cornix_right
+  #   artifact-name: cornix_right
+
+  # - board: cornix_e73
+  #   shield: settings_reset
+  #   artifact-name: reset
+
+  # - board: nice_nano_v2
+  #   shield: corne_dongle_pro_micro dongle_display
+  #   cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Dongle_O\"
+  #   artifact-name: nice_corne_dongle_oled
+  #   snippet: studio-rpc-usb-uart
+
+  # - board: nice_nano_v2
+  #   shield: corne_left
+  #   snippet: studio-rpc-usb-uart
+  # - board: nice_nano_v2
+  #   shield: corne_right
+  # - board: nice_nano_v2
+  #   shield: corne_left_peripheral
+  #   artifact-name: nice_corne_left_peripheral
 
 
-  - board: nice_nano_v2
-    shield: settings_reset
-    artifact-name: nice_settings_reset
+  # - board: nice_nano_v2
+  #   shield: settings_reset
+  #   artifact-name: nice_settings_reset
