update cornix config

--- a/config/west.yml
+++ b/config/west.yml
@@ -8,6 +8,11 @@ manifest:
       url-base: https://github.com/urob
     - name: dhruvinsh
       url-base: https://github.com/dhruvinsh
+    - name: hitsmaxft
+      url-base: https://github.com/hitsmaxft
+    - name: janpfischer
+      url-base: https://github.com/janpfischer
+
     # Additional modules containing boards/shields/custom code can be listed here as well
     # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
   projects:
