--- a/build.yaml
+++ b/build.yaml
@@ -21,20 +21,29 @@
 include:
   - board: nice_nano_v2
     shield: cornix_dongle_adapter cornix_dongle_eyelash dongle_display
-    snippet: studio-rpc-usb-uart
-    artifact-name: cornix_dongle
+    snippet: studio-rpc-usb-uart nrf52840-nosd
+    artifact-name: cornix_dongle_nosd
+
+  - board: cornix_left
+    #shield: cornix_indicator
+    artifact-name: cornix_left_default_nosd
 
   - board: cornix_ph_left
-    # shield: cornix_indicator
-    artifact-name: cornix_left_for_dongle
+    #shield: cornix_indicator
+    artifact-name: cornix_left_for_dongle_nosd
 
   - board: cornix_right
-    # shield: cornix_indicator
-    artifact-name: cornix_right
+    #shield: cornix_indicator
+    artifact-name: cornix_right_nosd
 
   - board: cornix_right
     shield: settings_reset
     artifact-name: reset
+
+  - board: cornix_right
+    shield: settings_reset
+    snippet: studio-rpc-usb-uart nrf52840-nosd
+    artifact-name: reset_nosd
 
   # - board: cornix_e73
   #   shield: cornix_dongle dongle_display
